--- a/Language_performance_comparison_cctb_seminar/ReadMe
+++ b/Language_performance_comparison_cctb_seminar/ReadMe
@@ -1,4 +1,4 @@
-##Language Performance Comparison of the same task (numerical solution of a differential equation) together with slides and notes from our seminar :
+# Language Performance Comparison of the same task (numerical solution of a differential equation) together with slides and notes from our seminar :
 Only in the case of Python,Julia,R and C++ we are sure that the code is sufficiently well written to call it a fair comparison.
 The Jupyter notebooks for the other languages have essentially been hacked together on one evening.
 Therefore, there is probably a lot of room for improvements.
